--- a/src/turtle.css
+++ b/src/turtle.css
@@ -3,7 +3,7 @@
 }
 
 body {
-    font-family: "Benton Sans", "Helvetica Neue", helvetica, arial, sans-serif;
+    font-family: 'Roboto',sans-serif;
     margin: 2em;
     margin: auto;
     text-align: center;
@@ -13,7 +13,8 @@ body {
 h1,
 .h1 {
     color: #102E87;
-    font-family: monospace;
+    /*font-family: monospace;*/
+    font-family: 'Roboto Condensed',sans-serif;
     font-size: 2rem;
 
 }
@@ -53,11 +54,13 @@ form,
     margin-bottom: 25px;
     padding: 0px 10px 5px 10px;
     margin: 8px auto 8px;
-    border: 2px solid #0e2877;
-    box-shadow: 5px 6px 0px #0e2877;
+    border: solid 2px #2C3A47;
+    /*box-shadow: 5px 6px 0px #0e2877;*/
+    box-shadow: 8px 8px 0 0 #f7d794;
     width: 95%;
     max-width: 600px;
-    border-radius: 16px;
+    border-radius: 1rem;
+    /*border-radius: 16px;*/
 }
 
 .banner {
@@ -84,7 +87,7 @@ input {
     margin-bottom: 10px;
     /*padding: 5px;*/
     width: 100%;
-    border: 2px solid #0e2877;
+    border: 2px solid #55E6C1;
     border-radius: 8px;
     ;
     font-size: 16px;
@@ -92,24 +95,74 @@ input {
 
 }
 
-.intext{
-    border-radius: 8px;
-    width: 100%;
-    border-top: 2px solid #0e2877;
-    border-bottom: 2px solid #0e2877;
-     resize: vertical;
+.banner-container{
+    border: 2px solid #6EF1FF;
+    border-radius: 0.5rem;
+    font-family: 'Roboto Condensed',sans-serif;
+    display: flex;
+    flex-direction: column;
+    /*text-transform: uppercase;*/
+    text-align: center;
+    line-height: 1.40rem;
+    margin-top: 8px;
+    margin-bottom: 8px;
+    padding: 0rem 0.5rem 1rem 0.5rem;
 }
 
-button {
+.text-banner{
+    
+    font-size: 2rem;
+    /*font-weight: normal;*/
+    line-height: 1.40rem;
+    margin-bottom: 12px;
+    color: #182C61;
+    
+}
+
+.text-subbanner{
+    font-size: 80%;
+    font-weight: normal;
+    color: #1B9CFC;
+    /*border: 2px solid #f7d794;*/
+    /*border-radius: 0.5rem;*/
+}
+
+.screw-head-icons{
+    -webkit-flex: 1 0 auto;
+-ms-flex: 1 0 auto;
+flex: 1 0 auto;
+-webkit-box-pack: justify;
+-webkit-justify-content: space-between;
+-ms-flex-pack: justify;
+justify-content: space-between;
+display: -webkit-box;
+display: -webkit-flex;
+display: -ms-flexbox;
+display: flex;
+width: 100%;
+font-size: 8px;
+padding: 0.5rem 0 0 0;
+}
+
+.intext{
+    /*border-radius: 8px;*/
+    width: 100%;
+    border-top: 2px solid #55E6C1;
+    border-bottom: 2px solid #55E6C1;
+     resize: vertical;
+     cursor: text;
+}
+
+.topControls button {
     margin-top: 2px;
-    font-size: 15px;
+    font-size: 10px;
     border-radius: 16px;
     display: inline-block;
-    text-align: center;
+    /*text-align: center;*/
     color: #0e2877;
     background-color: white;
     padding: 4px 8px;
-    border: 2px solid #0e2877;
+    border: 2px solid #FD7272;
     cursor: pointer;
 }
 
