--- a/src/turtle.css
+++ b/src/turtle.css
@@ -122,7 +122,7 @@ input {
 .text-subbanner{
     font-size: 80%;
     font-weight: normal;
-    color: skyblue;
+    color: rgb(0,100,200);
     /*border: 2px solid #f7d794;*/
     /*border-radius: 0.5rem;*/
 }
