--- a/src/turtle.css
+++ b/src/turtle.css
@@ -210,6 +210,7 @@ input {
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 99999999999;
   font-size: 11px;
+  border-radius: 8px;
 }
 
 .dropdown-content a {
@@ -220,6 +221,7 @@ input {
   display: block;
   text-align: left;
   cursor: pointer;
+
 }
 
 .dropdown-content a:hover {
@@ -231,6 +233,27 @@ input {
     border: none;
 }
 
+button.sharebtn {
+    margin-top: 2px;
+    font-size: 12px;
+    border-radius: 16px;
+    display: inline-block;
+    /*text-align: center;*/
+    color: #0e2877;
+    background-color: white;
+    padding: 4px 8px;
+    /*border: 2px solid #FD7272;*/
+    cursor: pointer;
+
+}
+
+button.facebook{
+    border: 2px solid #4160a2;
+}
+
+button.twitter{
+    border: 2px solid #43b1f4;
+}
 
 button:hover {
     background-color: cyan;
