--- a/src/turtle.css
+++ b/src/turtle.css
@@ -58,6 +58,7 @@ form,
     /*box-shadow: 5px 6px 0px #0e2877;*/
     box-shadow: 8px 8px 0 0 #f7d794;
     width: 95%;
+    height: 95%;
     max-width: 600px;
     border-radius: 1rem;
     /*border-radius: 16px;*/
