--- a/src/turtle.css
+++ b/src/turtle.css
@@ -58,7 +58,8 @@ form,
     /*box-shadow: 5px 6px 0px #0e2877;*/
     box-shadow: 8px 8px 0 0 #f7d794;
     width: 95%;
-    height: 95%;
+    /*height: 100%;*/
+    /*height: calc(100vh - 2rem);*/
     max-width: 600px;
     border-radius: 1rem;
     /*border-radius: 16px;*/
@@ -88,6 +89,8 @@ input {
     margin-bottom: 10px;
     /*padding: 5px;*/
     width: 100%;
+    /*height: 56%;*/
+    /*height: calc(100vh - 10rem) !important;*/
     border: 2px solid #55E6C1;
     border-radius: 8px;
     ;
@@ -163,12 +166,14 @@ input {
 
 .intext{
     /*border-radius: 8px;*/
+
     width: 100%;
+    /*height: calc();*/
     border-top: 2px solid #55E6C1;
     border-bottom: 2px solid #55E6C1;
      resize: vertical;
      cursor: text;
-    min-height: 50px;
+    min-height: 100px;
     text-align: left;
     padding: 5px;
     max-width: 600px;
@@ -235,6 +240,19 @@ input {
     padding: 2px;
     margin-left: 5px;
     margin-bottom: 0;
+}
+
+small.button{
+    margin-top: 2px;
+    /*font-size: 12px;*/
+    /*border-radius: 16px;*/
+    display: inline-block;
+    /*text-align: center;*/
+    color: #0e2877;
+    background-color: white;
+    /*padding: 4px 8px;*/
+    border: 1px solid #55E6C1;
+    cursor: pointer;
 }
 
 button.sharebtn {
